<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/header-main"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="#0288D1"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/title_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/header_txt"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="178dp"
            tools:layout_editor_absoluteY="22dp" />

    </android.support.v7.widget.Toolbar>


    <Button
        android:id="@+id/enr_btn"
        android:layout_width="206dp"
        android:layout_height="56dp"
        android:layout_marginTop="120dp"
        android:background="#689F38 "
        android:onClick="clickEnroll"
        android:text="@string/enroll_btn"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header-main" />

    <Button
        android:id="@+id/ver_btn"
        android:layout_width="206dp"
        android:layout_height="56dp"
        android:layout_marginTop="40dp"
        android:background="#689F38 "
        android:onClick="clickVerify"
        android:text="@string/verify_btn"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enr_btn" />

    <Button
        android:id="@+id/chk_btn"
        android:layout_width="206dp"
        android:layout_height="56dp"
        android:layout_marginTop="40dp"
        android:background="#689F38 "
        android:onClick="clickCheck"
        android:text="@string/check_btn"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ver_btn" />

    <Button
        android:id="@+id/conn_btn"
        android:layout_width="206dp"
        android:layout_height="56dp"
        android:layout_marginBottom="120dp"
        android:layout_marginTop="40dp"
        android:background="#689F38 "
        android:onClick="clickConnect"
        android:text="@string/connect_btn"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chk_btn"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>